--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"axios": "^1.6.8",
+		"nodemailer": "^6.9.13",
+		"svelte-routing": "^2.12.0"
+	}
 }
