--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	"dependencies": {
 		"axios": "^1.6.8",
 		"nodemailer": "^6.9.13",
-		"svelte-routing": "^2.12.0"
+		"svelte-routing": "^2.12.0",
+		"sweetalert2": "^11.10.8"
 	}
 }
